# trend-analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  trend-analyzer-PRD.md
backend/: .dockerignore  .env.auto.example  .env.example  .env.real.example  Dockerfile  pyproject.toml  run_server.py
backend/app/: __init__.py  cli.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/services/: __init__.py  archive_relevance.py  backfill.py  collector.py  direct_rss_catalog.py  github_repo_resolution.py  management.py  mock_providers.py  provider_diagnostics.py  provider_registry.py  provider_smoke.py  provider_types.py  provider_urls.py  provider_verification.py  providers.py  query_parser.py  query_variants.py  scheduler.py  search.py
backend/app/web/: app.js  index.html  styles.css
backend/tests/: test_acceptance_scripts.py  test_services.py
docs/: README.md  acceptance-automation-checklist-2026-03-19.md  archive-relevance-config-checklist-2026-03-19.md  bilingual-keyword-search-checklist-2026-03-19.md  current-functional-flow.md  docker-deployment.md  frontend-removal-checklist-2026-03-19.md  keyword-trend-line-checklist-2026-03-19.md  keyword-trend-regression-checklist-2026-03-19.md  license-adoption-checklist-2026-03-19.md  local-acceptance.md  mvp-completion-checklist.md  mvp-plan.md  open-source-sanitization-checklist-2026-03-19.md  product-prd.md  provider-failure-readability-checklist-2026-03-19.md  provider-runtime.md  readme-bilingual-checklist-2026-03-19.md  readme-github-draft-checklist-2026-03-19.md  (+10 more)
(+39 files in other folders)
