[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trendscope-backend"
version = "0.1.0"
description = "TrendScope MVP backend scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
